[gd_scene load_steps=5 format=3 uid="uid://ds7iby3eabein"]

[ext_resource type="Script" path="res://scripts/Card.gd" id="1_u7yu8"]
[ext_resource type="Texture2D" uid="uid://bplon4im6i5q6" path="res://sprites/card_front.png" id="2_ogtmq"]
[ext_resource type="Texture2D" uid="uid://d25lqx1qc77m0" path="res://sprites/card_back.png" id="3_adtt8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnio7"]

[node name="Card" type="Node2D"]
script = ExtResource("1_u7yu8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(2.5, 3.5)
shape = SubResource("RectangleShape2D_lnio7")

[node name="FrontSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ogtmq")

[node name="BackSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("3_adtt8")

[node name="ValueLabel" type="Label" parent="."]
offset_left = -25.0
offset_top = -35.0
offset_right = 15.0
offset_bottom = -12.0
scale = Vector2(1.24558, 1.52507)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"

[node name="SuitLabel" type="Label" parent="."]
offset_left = -25.0
offset_right = 15.0
offset_bottom = 23.0
scale = Vector2(1.25137, 1.52312)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
